# MIT-MAS665-AssignmentsHW-1

./: README.md
edu_sales/: README.md  pyproject.toml  report.md
edu_sales/knowledge/: bootcamp_faq.md  china_education.md  homework_report.md  persona_coco.md
edu_sales/outputs/: bootcamp_qa.md  china_ecosystem.md  email_draft.md  intro.md
edu_sales/src/edu_sales/: agent_config.py  crew.py  main.py
edu_sales/src/edu_sales/config/: agents.yaml  tasks.yaml
edu_sales/src/edu_sales/tools/: __init__.py  bootcamp_faq.py  china_explainer.py  email_draft.py  profile_responder.py
