[project]
name = "edu_sales"
version = "0.1.0"
description = "Education sales agent"
authors = [{ name = "Rong Wu", email = "rongwu@gse.harvard.edu" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
edu_sales = "edu_sales.main:run"
run_crew = "edu_sales.main:run"
train = "edu_sales.main:train"
replay = "edu_sales.main:replay"
test = "edu_sales.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
